# SuperTx-Backend-v2

./: .env.example  Dockerfile  README.md  app.py  motivacao-projeto.md  pyproject.toml
database/: db.sqlite3
log/: gunicorn.detailed.log.1  gunicorn.detailed.log.10  gunicorn.detailed.log.2  gunicorn.detailed.log.3  gunicorn.detailed.log.4  gunicorn.detailed.log.5  gunicorn.detailed.log.6  gunicorn.detailed.log.7  gunicorn.detailed.log.8  gunicorn.detailed.log.9
model/: clientes.py  corrida.py
schemas/: __init__.py  clientes.py  corridas.py
