[tool.poetry]
name = "SuperTx-backend"
version = "0.1.0"
description = "projeto relacionado a sprint de arquitetura de software do curso de pós graduação de engenharia de software da PuC Rio" 
authors = ["Camila Caldas <camisccb@gmail.com>"]
readme = "README.md"
packages = [{include = "buddyconnect_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-openapi3 = "^3.0.0"
flask-cors = "^4.0.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
google-auth = "^2.31.0"
google-api-python-client = "^2.136.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
